:bug: overflow in h1 at media query

--- a/styles/style.css
+++ b/styles/style.css
@@ -191,7 +191,7 @@ button.display-vanish {
   h1 {
     font-size: 2.25em;
 
-    margin-top: 44px;
+    padding-top: 44px;
     margin-bottom: 21px;
   }
 
